fix z-index

--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -120,7 +120,7 @@ body {
 .mobile-menu{
 
     display: none;
-    z-index: 1000;
+    z-index: 10000;
 }
 
 .hamburger-grid{
